js/js.translator/testData/incremental/invalidation/inlineFunctionAnnotations/lib1/l1.1.kt
@JsExport
class MyClassA {
    inline fun foo() = 42
}
